fix(cgss): dark mode fill color

--- a/src/views/cgss/styles/CgssUnitViewerTable.scss
+++ b/src/views/cgss/styles/CgssUnitViewerTable.scss
@@ -14,7 +14,7 @@
     .skill-mutual,
     .skill-overdrive,
     .skill-cboost {
-      background-color: hsl(0, 0%, 95%);
+      background-color: var(--el-fill-color-lighter);
     }
 
     .el-table__cell {
